methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:7: error: not found: value JointureVerticale
  JointureVerticale()
  ^